Correct README casing and update display name in package.json for consistency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "readme-creator",
-  "displayName": "README Creator",
+  "displayName": "Readme Creator",
   "description": "AI-powered README creator for your projects",
   "repository": {
   "type": "git",
