--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "git",
   "url": "https://github.com/Madhur-Prakash/VSCode-Extension-Readme-Creator.git"
   },
-  "version": "1.1.3",
+  "version": "1.1.4",
   "publisher": "MadhurPrakash",
   "icon": "icon.png",
   "engines": {
@@ -68,24 +68,19 @@
           "when": "workspaceFolderCount > 0"
         },
         {
-          "command": "readmeGenerator.preview",
-          "when": "resourceExtname == .md"
+          "command": "readmeGenerator.preview"
         },
         {
           "command": "readmeGenerator.createEnvTemplate"
         },
         {
           "command": "readmeGenerator.configure"
-        },
-        {
-          "command": "readmeGenerator.preview",
-          "when": "resourceExtname == .md"
         }
       ],
       "editor/title": [
         {
           "command": "readmeGenerator.preview",
-          "when": "resourceFilename == README.md",
+          "when": "resourceExtname == .md",
           "group": "navigation"
         }
       ]
